# Loki

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  config.rs  error.rs  lib.rs  main.rs  serenity_handler.rs
src/command/: memes_channel_mgmt.rs  mod.rs  set_status_meaning.rs  util.rs
src/subsystems/: events.rs  memes.rs  mod.rs  nickname_lottery.rs  scoreboard.rs  status_meaning.rs  stream_indicator.rs  text_response.rs  thread_reviver.rs  timeout_monitor.rs
