[package]
name = "loki-discord-bot"
version = "0.1.0"
edition = "2021"
description = "A bot to serve various meme-related purposes within a personal Discord server."
readme = "README.md"
repository = "https://github.com/Lyrenhex/Loki"
license = "MIT OR Apache-2.0"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
toml = "0.5"
serde = { version = "1.0", features = ["serde_derive"] }
log = "0.4"

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
