[package]
name = "loki-discord-bot"
version = "0.10.0"
edition = "2021"
description = "A bot to serve various meme-related purposes within a personal Discord server."
readme = "README.md"
repository = "https://github.com/Lyrenhex/Loki"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "events",
    "memes",
    "nickname-lottery",
    "status-meaning",
    "stream-indicator",
    "text-response",
    "thread-reviver",
    "timeout-monitor",
    "scoreboard",
]

# Privileged Intents
guild-presences = []
guild-members = []
message-content = []

# Feature sets
# Any features requiring a specific privileged intent will automatically enable that intent's feature.
events = []
memes = []
nickname-lottery = []
status-meaning = []
stream-indicator = ["guild-presences"]
text-response = ["message-content"]
thread-reviver = []
timeout-monitor = ["guild-members"]
scoreboard = ["dep:const_format"]

[dependencies]
tokio = { version = "^1.22", features = ["macros", "rt-multi-thread"] }
env_logger = "^0.11"
toml = "^0.8"
serde = { version = "^1.0", features = ["serde_derive"] }
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0.8.5"
tinyvec = "^1.6.0"
# Added due to reqwest dependency problems when cross-compiling for RPi
openssl = { version = "^0.10.32", features = ["vendored"] }
const_format = { version = "0.2.32", optional = true }

[dependencies.serenity]
version = "^0.12"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    "chrono",
]
